# llm-harness-proxy

./: .gitattributes  .gitignore  README.md  SPEC.md  reconstruct_transcript.py  test.js
.acm/: destination.md
.github/workflows/: build-proxy.yml
.harness/sessions/: 01KR11BZZQSZP4M8R3MKW73G0G.jsonl  01KR120W36Q765F3H5ADZRBB53.jsonl  01KR1210XAV7C6VZWAH9NPNGKW.jsonl  01KR15Y9TC2BBSBJ5XKWQBAE79.jsonl  01KR16BJKXBW6XMNMPKK.jsonl  01KR1NAHV5BW4XWQN4DW.jsonl
.trail/: audit-trail.md  destination.md  history.md  learning.md  log.md  retrospect.md  vision.md
.trail/session/: manifesto_context_transcript.md
docs/: AAT-MAPPING.md  landscape.txt
extension/: README.md  package-lock.json  package.json  tsconfig.json
extension/src/: chatParticipant.ts  extension.ts  harnessRoot.ts  ledgerProvider.ts  ledgerWriter.ts  proxyController.ts
proxy/: pyproject.toml
proxy-rust/: Cargo.toml
proxy-rust/.cargo/: config.toml
proxy-rust/src/: jcs.rs  ledger.rs  main.rs  ulid.rs
proxy/harness_proxy/: __init__.py  jcs.py  ledger.py  proxy.py  ulid.py
proxy/harness_proxy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
proxy/tests/: test_proxy.py
