[package]
name = "harness-proxy"
version = "0.1.0"
edition = "2021"
description = "Harness Protocol — fail-closed MITM proxy. Dumb pipe: intercept, ledger, release."

[[bin]]
name = "harness-proxy"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", features = ["std"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
bytes = "1"
tokio-stream = "0.1"
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
