[project]
name = "harness-proxy"
version = "0.1.0"
description = "Harness Protocol MVP proxy — invisible MITM enforcing fail-closed action gating"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["harness_proxy*"]
